# whodouthinkur

./: README.md  debug_packing  debug_packing.c
c-mayo/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
c-mayo/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
c-mayo/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
c-mayo/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
rust-mayo/: Cargo.toml  README.md  test_keys.js
rust-mayo/benches/: mayo_benches.rs
rust-mayo/frontend/: README.md  app.js  index.html  package-lock.json  package.json  rust_mayo.d.ts  rust_mayo.js  rust_mayo_bg.wasm  rust_mayo_bg.wasm.d.ts  test.js  test_pupeteer.js  test_simple.cjs  worker.js
rust-mayo/src/: crypto.rs  encoding.rs  f16.rs  lib.rs  main.rs  matrix.rs  mayo_operations.rs  mvector.rs  params.rs  test_sign.rs  vector.rs  wasm_api.rs
rust-mayo/tests/: final_demo_test.rs  final_summary_test.rs  integration_tests.rs  mayo_integration_test.rs  mayo_kat_tests.rs  nist_compliance_test.rs  wasm_test.html  wasm_test.js
rust-mayo/tests/common/: mod.rs
src/: encoding.rs
