[package]
name = "rust-mayo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_shake256 = "0.1.0"
rand = "0.8"
aes = "0.8"
ctr = "0.9"
thiserror = "1.0.50"
sha3 = "0.10"
hex = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "mayo_benches"
harness = false
